assets/css/style.css
/* ... */
/* copyright elements: colors and arrangement */
#copyright * {
  margin: 0 auto;
  color: var(--white);
  font-size: small;
}


/* media query: devices with good pointer capabilities (mouse, trackpad) */
@media screen and (pointer: fine) {

  /*  links should change color and be underlined when hovered over */
  a:hover { /* underline: footer icons included*/
    text-decoration: underline;
  }

  a:hover,
  a:hover i { /* color change: footer icons not included*/
    color: var(--white);
  }

  #solutions a:hover {
    color: var(--white);
    font-weight: bold;
  }

  .cred-content a:hover {
    color: var(--light);
  }

  /* About section */

  /* credential cards should have instructions to "hover" instead of "tap" */

  .cred-hover {
    display: block;
  }

  .cred-tap {
    display: none;
  }

  /* contact form */

  /* text input form should have highlighted border on hover */
  .text-input:hover {
    border-color: var(--light);
  }

  /* send button should change color on hover */
  .send-button:hover {
    background-color: var(--white);
  }
}

/* media query: very narrow phones */
@media screen and (max-width: 300px) {

  /* hearder */
  /* nav bar */
  /* logo link box should not extend too much to the right, it gets too close to the nav bar toggle to comfortably tap on mobile */
  #logo-link {
    max-width: 75%;
  }

  /* Main content */
  #hero-text {
    height: 12rem;
  }

  /* Problems & Solutions section: resize boxes */
  #millions .color-cover {
    height: 70vh;
  }

  #frustrated .color-cover {
    height: 120vh;
  }

  #learn-list .color-cover {
    height: 170vh;
  }

  #success .color-cover {
    height: 120vh;
  }

  /*  Contact section */

  /* Calendly widget should extend wider than other text */
  .calendly-container{
    margin-left: -10%;
    margin-right: -10%;
  }

  .calendly-inline-widget {
    min-width:270px;
  }

}

/* media query: phones */
@media screen and (max-width: 480px) {

  /* About section: text should appear at the bottom of the image */
  #why-me {
    flex-direction: column;
  }
  #why-me-text {
    max-width: 100%;
  }
}

/* larger phones and bigger devices */
@media screen and (min-width: 378px) {

  /* contact form */
  /* the text input fields should be aligned right */
  .text-input-cont {
    flex-direction: row;
    justify-content: flex-end; }
  }


  /* media query: tablets and larger */
  @media screen and (min-width: 768px) {

    /* header */

    header {
      padding: 4vh 10%;
    }

    /* header should not obscure the top of the element navigated to */
    #problems h2,
    #about h2,
    #contact h2{
      margin-top: 10vh;
    }

    /* main content */
    /* hero image */
    #hero {
      padding-top: 10%;
    }

    #hero-text {
      margin-top: 5%;
    }

    /* Problems & Solutions section */

    /* adjust padding for text */
    .p-cont {
      padding: 2rem;
    }

    /* text and pics should be side by side */

    .color-cover {
      flex-direction: row;
      align-items: center;
      justify-content: space-between;
    }

    /* every 2nd box should have the order of the image and text flipped
    has to come after `.color-cover {flex-direction: row;}` */
    .flip {
      flex-direction: row-reverse;
    }

    /* adjust sizes of box elements */

    #millions .color-cover {
      max-height: 30vh;
    }

    #millions .p-cont {
      max-width: 40%;
    }

    #frustrated .color-cover {
      max-height: 50vh;
    }

    #frustrated .p-cont,
    #frustrated-cont .p-cont {
      max-width: 60%;
    }

    #learn-list .color-cover {
      max-height: 100vh;
    }

    #learn-list .p-cont {
      max-width: 60%;
    }

    #success .color-cover {
      max-height: 60vh;
    }

    #success .p-cont,
    #success-cont .p-cont {
      max-width: 60%;
    }

    /* About section */
    /* YouTube video */
    #video,
    #video iframe {
      height: 400px;
    }

  }

  /* phones and smaller tablets */
  @media screen and (max-width: 816px) {
    /* add white border to Calendly widget for small and medium screen sizes */
    .calendly-inline-widget {
      border: 2px solid white;
    }
  }

  /* bigger tablets, laptops and desktops */
  @media screen and (min-width: 880px) {
    /* nav bar */

    /* display nav list without user action */
    nav {
      display: block;
      position: relative;
      box-shadow: none;
      width: fit-content;
      font-size: 120%;
      /* could not figure out why this is not aligned with the right edge of the parent, so adjusted manually */
      margin-right: -2rem;
    }

    /* hamburger menu should not be shown */
    .nav-toggle-label {
      display: none;
    }

    /* arrangement of nav list */
    nav ul {
      display:flex;
      padding: 0;
    }

    /* add padding between nav list items */
    .non-last-li {
      padding-right: 1rem;
    }
  }

  /* laptops and desktops */
  @media screen and (min-width: 992px) {

    /* header should not obscure the top of the element navigated to */
    #problems h2,
    #about h2,
    #contact h2{
      margin-top: 8vh;
    }

    /* hero image */
    #hero {
      /* reduce top padding on wide screens */
      padding-top: 5%;
      background: url("../images/hero-img-opt.webp") no-repeat center center/cover;
    }

    /* Problems & Solutions section */

    /* adjust sizes of box elements */

    #frustrated .color-cover {
      max-height: 30vh;
    }

    #learn-list .color-cover {
      max-height: 70vh;
    }

    #success .color-cover {
      max-height: 40vh;
    }

    /* About section */
    /* Credentials image */
    #why-me {
      padding-right: 10%;
    }

    /* YouTube video */
    #video,
    #video iframe {
      height: 500px;
    }

  }

